Project

General

Profile

Actions

Bug #23201

closed

s3 website: some s3tests are failing because redirects include index doc suffix

Added by Casey Bodley about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

FAIL: s3tests.functional.test_s3_website.test_routing_generator({'url': '/x', 'xml': {'RoutingRules': '<RoutingRule><Condition><HttpErrorCodeReturnedEquals>404</Ht
tpErrorCodeReturnedEquals></Condition><Redirect><HostName>ec2-11-22-333-44.compute-1.amazonaws.com</HostName><ReplaceKeyPrefixWith>report-404/</ReplaceKeyPrefixWit
h></Redirect></RoutingRule>'}, 'code': 301, 'location': {'path': '/report-404/x', 'hostname': 'ec2-11-22-333-44.compute-1.amazonaws.com', 'proto': 'http'}},)

AssertionError: Location header should be set "http://ec2-11-22-333-44.compute-1.amazonaws.com/report-404/x/index-aew19svwl0wsdyj5tde3a.html" != "http://ec2-11-22-
333-44.compute-1.amazonaws.com/report-404/x" 

FAIL: s3tests.functional.test_s3_website.test_routing_generator({'url': '/images/x', 'xml': {'RoutingRules': '<RoutingRule><Condition><HttpErrorCodeReturnedEquals>
404</HttpErrorCodeReturnedEquals></Condition><Redirect><HostName>ec2-11-22-333-44.compute-1.amazonaws.com</HostName><ReplaceKeyPrefixWith>report-404/</ReplaceKeyPr
efixWith></Redirect></RoutingRule>'}, 'code': 301, 'location': {'path': '/report-404/images/x', 'hostname': 'ec2-11-22-333-44.compute-1.amazonaws.com', 'proto': 'h
ttp'}},)

AssertionError: Location header should be set "http://ec2-11-22-333-44.compute-1.amazonaws.com/report-404/images/x/index-75qu65nudc0p2iozqhygi.html" != "http://ec2
-11-22-333-44.compute-1.amazonaws.com/report-404/images/x" 

FAIL: s3tests.functional.test_s3_website.test_routing_generator({'url': '/images/x', 'xml': {'RoutingRules': '<RoutingRule><Condition><KeyPrefixEquals>images/</Key
PrefixEquals><HttpErrorCodeReturnedEquals>404</HttpErrorCodeReturnedEquals></Condition><Redirect><HostName>ec2-11-22-333-44.compute-1.amazonaws.com</HostName><Repl
aceKeyPrefixWith>report-404/</ReplaceKeyPrefixWith></Redirect></RoutingRule>'}, 'code': 301, 'location': {'path': '/report-404/x', 'hostname': 'ec2-11-22-333-44.co
mpute-1.amazonaws.com', 'proto': 'http'}},)

AssertionError: Location header should be set "http://ec2-11-22-333-44.compute-1.amazonaws.com/report-404/x/index-v621d8oinbgd13120gmh3.html" != "http://ec2-11-22-
333-44.compute-1.amazonaws.com/report-404/x" 

Related issues 3 (0 open3 closed)

Related to rgw - Bug #20307: website request URL without slashes (for folder) returns error ResolvedCasey Bodley06/15/2017

Actions
Copied to rgw - Backport #23310: luminous: s3 website: some s3tests are failing because redirects include index doc suffixResolvedPrashant DActions
Copied to rgw - Backport #23311: jewel: s3 website: some s3tests are failing because redirects include index doc suffixResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley about 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Casey Bodley
Actions #2

Updated by Casey Bodley about 6 years ago

  • Related to Bug #20307: website request URL without slashes (for folder) returns error added
Actions #3

Updated by Orit Wasserman about 6 years ago

  • Status changed from Fix Under Review to 17
Actions #4

Updated by Casey Bodley about 6 years ago

  • Status changed from 17 to Pending Backport
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23310: luminous: s3 website: some s3tests are failing because redirects include index doc suffix added
Actions #6

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23311: jewel: s3 website: some s3tests are failing because redirects include index doc suffix added
Actions #7

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF