rgw: s3website error handler uses original object name

the s3website error handler needs to use the same object name for
redirect handling that retarget() does, but s->object.name may be
modified based on get_effective_key()

Fixes: http://tracker.ceph.com/issues/23201

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 8f7cbbce26c7fbccb7e9ae46040f3472d8762a88)

Conflicts:
	src/rgw/rgw_rest_s3.cc (auth rework)
	src/rgw/rgw_rest_s3website.h (frontend rework)